k8s-build/templates/ssl/sample-cluster-sample-dc.ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cluster-dse-ingress
  namespace: cass-operator
spec:
  entryPoints:
    - cassandra
  routes:
    # Match is the rule corresponding to an underlying router.
    - match: HostSNI('c2652ae8-bbce-46ec-99c0-59971d11b21d')
      services:
        - name: cluster1-dc1-rack1-sts-0
          port: 9042
          terminationDelay: 400
          weight: 10
    - match: HostSNI('f38caf96-2d65-4025-bd54-588523a112e6')
      services:
        - name: cluster1-dc1-rack2-sts-0
          port: 9042
          terminationDelay: 400
          weight: 10
    - match: HostSNI('ef932013-426a-47b9-9c11-c06e6fa2e4cc')
      services:
        - name: cluster1-dc1-rack3-sts-0
          port: 9042
          terminationDelay: 400
          weight: 10                    
  tls:
    domains:
    - main: cluster-dse
      sans:
      - c2652ae8-bbce-46ec-99c0-59971d11b21d
      - f38caf96-2d65-4025-bd54-588523a112e6
      - ef932013-426a-47b9-9c11-c06e6fa2e4cc
    options:
      name: cluster-dse-options
      namespace: cass-operator
    secretName: cluster-dse-cert
    passthrough: false
